--- a/src/app/action-sheet/action-sheet.component.html
+++ b/src/app/action-sheet/action-sheet.component.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      alert
+      actionSheet
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -20,5 +20,4 @@
   <ion-button expand="block" id="icons" (click)="presentIcons()">图标</ion-button>
   <ion-button expand="block" id="cssClass" (click)="presentWithCssClass()">添加自定义class</ion-button>
   <ion-button expand="block" id="cssClass" (click)="withEvent()">withEvent</ion-button>
-  
 </ion-content>
