--- a/src/app/datetime/datetime.component.html
+++ b/src/app/datetime/datetime.component.html
@@ -12,8 +12,8 @@
 
   <ion-item>
     <ion-label>常用格式，不能省略T</ion-label>
-    <ion-datetime displayFormat="YYYY年MM月DD日, HH:mm:ss" cancelText="取消" doneText="确定" (ionChange)="ionChanges($event)"
-      value="2012-12-15 13:47:01"></ion-datetime>
+    <ion-datetime displayFormat="YYYY-MM-DD HH:mm:ss" cancelText="取消" doneText="确定" (ionChange)="ionChanges($event)"
+      value="2012-12-15T13:47:01"></ion-datetime>
   </ion-item>
 
   <ion-item>
