--- a/src/app/some-component/some-component.component.scss
+++ b/src/app/some-component/some-component.component.scss
@@ -1,7 +1,20 @@
-.setTitle{
-    color:red;
+.setTitle {
+    color: red;
 }
-.setTitle2{
-    background:yellow;
-    height:25px;
+
+.setTitle2 {
+    background: yellow;
+    height: 25px;
+}
+
+.icon {
+    width: 3em;
+    height: 3em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+
+.myI {
+    font-size: 40px;
 }
