--- a/src/global.scss
+++ b/src/global.scss
@@ -10,7 +10,24 @@
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
 
-.selfCss2{
-    color:rgb(72, 255, 0)!important;
-    padding:40px!important;
+.selfCss2 {
+    color: rgb(72, 255, 0) !important;
+    padding: 40px !important;
 }
+
+@font-face {
+    font-family: 'myIcon';
+    src: url('assets/fonts/iconfont.eot');
+    src: url('assets/fonts/iconfont.eot?#iefix') format('embedded-opentype'),
+        url('assets/fonts/iconfont.woff2') format('woff2'),
+        url('assets/fonts/iconfont.woff') format('woff'),
+        url('assets/fonts/iconfont.ttf') format('truetype'),
+        url('assets/fonts/iconfont.svg#myIcon') format('svg');
+}
+.myIcon {
+    font-family: "myIcon" !important;
+    font-size: 16px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
