--- a/src/app/datetime/datetime.component.html
+++ b/src/app/datetime/datetime.component.html
@@ -17,60 +17,13 @@
   </ion-item>
 
   <ion-item>
-    <ion-label>MM DD YY</ion-label>
-    <ion-datetime displayFormat="MM DD YY" placeholder="Select Date"></ion-datetime>
+    <ion-label>年，月，日</ion-label>
+    <ion-datetime displayFormat="YYYY/MM/DD" placeholder="Select Date" (ionChange)="ionChanges($event)"></ion-datetime>
   </ion-item>
-
-  <ion-item>
-    <ion-label>Disabled</ion-label>
-    <ion-datetime id="dynamicDisabled" displayFormat="MM DD YY" disabled value="1994-12-15"></ion-datetime>
-  </ion-item>
-
-  <ion-item>
-    <ion-label>YYYY</ion-label>
-    <ion-datetime [pickerOptions]="customPickerOptions" placeholder="Custom Options" displayFormat="YYYY" min="1981"
-      max="2002"></ion-datetime>
-  </ion-item>
-
+  
   <ion-item>
     <ion-label position="stacked">MMMM YY</ion-label>
     <ion-datetime displayFormat="MMMM YY" min="1989-06-04" max="2004-08-23" value="1994-12-15T13:47:20.789"></ion-datetime>
-  </ion-item>
-
-  <ion-item>
-    <ion-label position="floating">MM/DD/YYYY</ion-label>
-    <ion-datetime displayFormat="MM/DD/YYYY" min="1994-03-14" max="2012-12-09" value="2002-09-23T15:03:46.789"></ion-datetime>
-  </ion-item>
-
-  <ion-item>
-    <ion-label position="floating">MM/DD/YYYY</ion-label>
-    <ion-datetime displayFormat="MM/DD/YYYY" min="1994-03-14" max="2012-12-09"></ion-datetime>
-  </ion-item>
-
-  <ion-item>
-    <ion-label>DDD. MMM DD, YY (custom locale)</ion-label>
-    <ion-datetime value="1995-04-15" min="1990-02" max="2000" [dayShortNames]="customDayShortNames" displayFormat="DDD. MMM DD, YY"
-      monthShortNames="jan, feb, mar, apr, mai, jun, jul, aug, sep, okt, nov, des"></ion-datetime>
-  </ion-item>
-
-  <ion-item>
-    <ion-label>D MMM YYYY H:mm</ion-label>
-    <ion-datetime displayFormat="D MMM YYYY H:mm" min="1997" max="2010" value="2005-06-17T11:06Z"></ion-datetime>
-  </ion-item>
-
-  <ion-item>
-    <ion-label>DDDD MMM D, YYYY</ion-label>
-    <ion-datetime displayFormat="DDDD MMM D, YYYY" min="2005" max="2016" value="2008-09-02"></ion-datetime>
-  </ion-item>
-
-  <ion-item>
-    <ion-label>HH:mm</ion-label>
-    <ion-datetime displayFormat="HH:mm"></ion-datetime>
-  </ion-item>
-
-  <ion-item>
-    <ion-label>h:mm a</ion-label>
-    <ion-datetime displayFormat="h:mm a"></ion-datetime>
   </ion-item>
 
   <ion-item>
@@ -88,4 +41,24 @@
     <ion-datetime monthValues="6,7,8" yearValues="2014,2015" dayValues="01,02,03,04,05,06,08,09,10, 11, 12, 13, 14"
       displayFormat="DD/MMM/YYYY"></ion-datetime>
   </ion-item>
+
+  <ion-item>
+    <ion-label>使用完全定制化</ion-label>
+    <ion-datetime 
+    (ionChange)="ionChanges($event)"
+
+    [pickerOptions]="customPickerOptions"
+    [cancelText]='cancel'
+    [doneText]='done'
+    [min]="minValue"
+    [max]="maxValue"
+    [dayValues]='dayValue'
+    [monthValues]='monthValue'
+    [placeholder]='placeholderText'
+
+    [displayFormat]='displayFormats'
+
+    ></ion-datetime>
+  </ion-item>
+
 </ion-content>
