--- a/src/app/fab/fab.component.html
+++ b/src/app/fab/fab.component.html
@@ -11,8 +11,8 @@
 
 <ion-content>
   <ion-button (click)="clickMainFAB(kk)">切换</ion-button>
-  
-  <ion-fab vertical="top" #kk horizontal="end" edge="false" id="fab1" slot="fixed">
+
+  <ion-fab vertical="top" #kk horizontal="end" edge="true" slot="fixed">
     <ion-fab-button size="small" class="e2eFabTopRight">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
