--- a/src/app/some-component/some-component.component.html
+++ b/src/app/some-component/some-component.component.html
@@ -191,3 +191,9 @@
     直接到顶部
   </ion-button>
 </ion-content>
+
+<ion-footer>
+    <ion-toolbar >
+      <ion-title>Footer</ion-title>
+    </ion-toolbar>
+  </ion-footer>
