--- a/src/app/wangge/wangge.component.html
+++ b/src/app/wangge/wangge.component.html
@@ -25,7 +25,7 @@
       </ion-col>
       <ion-col size="5" offset=".6">
         <div>
-            size="3" offset="0.6"
+          size="3" offset="0.6"
         </div>
       </ion-col>
     </ion-row>
@@ -59,5 +59,16 @@
 
     </ion-row>
   </ion-grid>
+
+  <ion-list>
+    <ion-item *ngFor="let item of items">
+      <ion-thumbnail slot="start">
+        <ion-img [src]="item.src"></ion-img>
+      </ion-thumbnail>
+      <ion-label>{{item.text}}</ion-label>
+    </ion-item>
+  </ion-list>
+  <ion-img src="../assets/earth.png"></ion-img>
+  <img src="../assets/earth.png" alt="">
 
 </ion-content>
