--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -47,9 +47,9 @@
   </ion-list>
 
   <ion-list>
-    <ion-item (click)="buttonClick()" detail="true">
+    <ion-item class="setItem" (click)="buttonClick()" detail="true" detailIcon='star'>
       <ion-label>
-        右边带箭头的
+        右边带图标，默认是箭头
       </ion-label>
     </ion-item>
   </ion-list>
@@ -61,11 +61,10 @@
       </ion-label>
     </ion-item>
 
-    <!-- Title and paragraph-->
     <ion-item>
       <ion-label text-wrap>
         <ion-text color="primary">
-          <h3>可以文字折行并字体有颜色</h3>
+          <h3>text-wrap 可以文字折行并字体有颜色 可以文字折行并字体有颜色 可以文字折行并字体有颜色 可以文字折行并字体有颜色</h3>
         </ion-text>
       </ion-label>
     </ion-item>
@@ -284,4 +283,132 @@
       <ion-range></ion-range>
     </ion-item>
   </ion-list>
+
+  <ion-list>
+    <ion-item-divider color="danger">
+      <ion-label>
+        段落分隔 A ，设置颜色
+      </ion-label>
+    </ion-item-divider>
+
+    <ion-item>
+      <ion-label>A1</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>A2</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>A3</ion-label>
+    </ion-item>
+
+    <ion-item-divider>
+      <ion-label>
+        段落分隔 B ，默认为灰色
+      </ion-label>
+    </ion-item-divider>
+
+    <ion-item>
+      <ion-label>B1</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>B2</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>B3</ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-item-divider>
+    <ion-label>
+      单独使用 ion-item-divider
+    </ion-label>
+  </ion-item-divider>
+
+  <ion-list>
+    <ion-item-divider>
+      <ion-label>
+        在 ion-list 中使用 ion-item-divider
+      </ion-label>
+    </ion-item-divider>
+  </ion-list>
+
+  <ion-item-group>
+    <ion-item-divider color="secondary">
+      <ion-label>
+        在 ion-item-group 中使用 ion-item-divider
+      </ion-label>
+    </ion-item-divider>
+  </ion-item-group>
+
+  <ion-item-group>
+    <ion-item>
+      <ion-label>
+        <ion-text color="secondary">
+          <h3>ion-label 中使用 ion-text</h3>
+        </ion-text>
+        <ion-text>ion-text2</ion-text>
+      </ion-label>
+    </ion-item>
+  </ion-item-group>
+
+  <ion-item-group>
+    <ion-item-divider>
+      <ion-label>
+        Item Divider
+        <ion-text color="danger">
+          Danger Span
+        </ion-text>
+      </ion-label>
+      <ion-button slot="end">button</ion-button>
+    </ion-item-divider>
+
+    <ion-item text-wrap class="custom-item">
+      <ion-label>
+        Multiline text that should wrap when it is too long to fit on one line in the item. Attribute on .item
+      </ion-label>
+    </ion-item>
+  </ion-item-group>
+
+  <ion-item-group>
+    <ion-item-divider color="dark">
+      <ion-button slot="start" fill="clear">
+        <ion-icon slot="icon-only" name="cloudy"></ion-icon>
+      </ion-button>
+      <ion-button slot="start" fill="clear" color="light">
+        <ion-icon slot="icon-only" name="rainy"></ion-icon>
+      </ion-button>
+
+      <ion-label>
+        Dark
+        <ion-text color="primary">
+          <h5>Primary h5</h5>
+        </ion-text>
+      </ion-label>
+    </ion-item-divider>
+
+    <ion-item text-wrap>
+      <ion-label>
+        <h1>H1 Title Text</h1>
+      </ion-label>
+    </ion-item>
+  </ion-item-group>
+
+  <ion-item-group>
+    <ion-item-divider color="secondary">
+      <ion-label>Secondary</ion-label>
+    </ion-item-divider>
+
+    <ion-item>
+      <ion-label>
+        Column 1
+      </ion-label>
+      <ion-label>
+        Column 2
+      </ion-label>
+      <ion-label>
+        Column 3
+      </ion-label>
+    </ion-item>
+  </ion-item-group>
+
 </ion-content>
