--- a/src/app/side-swipe/side-swipe.component.html
+++ b/src/app/side-swipe/side-swipe.component.html
@@ -1,14 +1,172 @@
 <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title>
-          side-swipe
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-<ion-content>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      side-swipe
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content fullscreen>
 
-  asdf
-</ion-content>  
+  <ion-list>
+    <div>
+
+      <ion-item-sliding>
+        <ion-item>
+          <ion-label>
+            只能从右向左滑动
+          </ion-label>
+        </ion-item>
+
+        <ion-item-options>
+          <ion-item-option color="primary">
+            <ion-icon name="more"></ion-icon>
+            <span class="more-text"></span>
+          </ion-item-option>
+          <ion-item-option color="secondary" (click)="archive('item6')">
+            <ion-icon name="archive"></ion-icon>
+            <span class="archive-text"></span>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+
+      <ion-item-sliding>
+        <ion-item>
+          <ion-label>
+            可以左右滑动
+          </ion-label>
+        </ion-item>
+
+        <ion-item-options side="start">
+          <ion-item-option color="primary">
+            <ion-icon slot="icon-only" name="more"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+
+        <ion-item-options side="end" class="show-options">
+          <ion-item-option color="primary">
+            <ion-icon name="more"></ion-icon>
+            <span class="more-text"></span>
+          </ion-item-option>
+          <ion-item-option color="secondary">
+            <ion-icon name="archive"></ion-icon>
+            <span class="archive-text"></span>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+
+      <ion-item-sliding>
+        <ion-item detail>
+          <ion-label>
+            <h2>添加后缀 ion-note</h2>
+            <p>asdfasd asdfasdf asdfasdf</p>
+            <p>asdfasd asdfasdf asdfasdf</p>
+          </ion-label>
+          <ion-note slot="end">
+            10:45 AM
+          </ion-note>
+        </ion-item>
+
+        <ion-item-options side="start">
+          <ion-item-option>
+            No close
+          </ion-item-option>
+        </ion-item-options>
+
+        <ion-item-options side="end">
+          <ion-item-option color="danger" (click)="unread('item100')">
+            <ion-icon slot="icon-only" name="trash"></ion-icon>
+          </ion-item-option>
+          <ion-item-option (click)="unread('item100')">
+            <ion-icon slot="icon-only" name="star"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+
+      </ion-item-sliding>
+
+      <ion-item-sliding>
+        <ion-item detail>
+          <ion-label text-wrap>
+            <h2>RIGHT/LEFT side - icons (slot="start")</h2>
+            <p>I think I figured out how to get more Mountain Dew</p>
+          </ion-label>
+        </ion-item>
+        <ion-item-options side="start" icon-start class="sliding-enabled">
+          <ion-item-option color="secondary" expandable (click)="unread('item3')">
+            <ion-icon name="ios-checkmark"></ion-icon>Unread
+          </ion-item-option>
+        </ion-item-options>
+
+        <ion-item-options icon-start>
+          <ion-item-option color="primary" (click)="archive('item3')">
+            <ion-icon name="mail"></ion-icon>Archive
+          </ion-item-option>
+          <ion-item-option color="danger" (click)="del('item3')" expandable class="sliding-enabled">
+            <ion-icon name="trash"></ion-icon>Delete
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+
+      <ion-item-sliding>
+        <ion-item>
+          <ion-avatar slot="start">
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAAAAACH5BAAAAAAALAAAAAABAAEAAAICTAEAOw==">
+          </ion-avatar>
+          <ion-label>
+            使用头像图片
+          </ion-label>
+        </ion-item>
+        <ion-item-options>
+          <ion-item-option color="primary" expandable>
+            <ion-icon name="more"></ion-icon>More
+          </ion-item-option>
+          <ion-item-option color="secondary" (click)="archive('item5')">
+            <ion-icon name="archive"></ion-icon>Archive
+          </ion-item-option>
+          <ion-item-option color="light" (click)="del('item5')">
+            <ion-icon name="trash"></ion-icon>Delete
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+
+      <ion-item-sliding>
+        <ion-item>
+          <ion-thumbnail slot="start">
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAAAAACH5BAAAAAAALAAAAAABAAEAAAICTAEAOw==">
+          </ion-thumbnail>
+          <ion-label>
+            <h2>DOWNLOAD</h2>
+            <p>Paragraph text.</p>
+          </ion-label>
+        </ion-item>
+        <ion-item-options>
+          <ion-item-option color="primary" (click)="archive('item8')">
+            <ion-icon name="archive"></ion-icon>Archive
+          </ion-item-option>
+          <ion-item-option color="secondary" expandable (click)="download('item8')">
+            <ion-icon name="download" class="download-hide"></ion-icon>
+            <div class="download-hide">Download</div>
+
+            <ion-icon class="download-spinner" name="refresh"></ion-icon>
+            <div class="download-spinner">Loading...</div>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </div>
+  </ion-list>
+
+  <ion-label>Label</ion-label>
+  <ion-label color="primary">Primary Label</ion-label>
+  <ion-label color="secondary">Secondary Label</ion-label>
+  <ion-label color="danger">Danger Label</ion-label>
+  <ion-label color="light">Light Label</ion-label>
+  <ion-label color="dark">Dark Label</ion-label>
+
+  <hr>
+
+  <ion-button id="default" expand="block" (click)="show()">
+    显示默认样式</ion-button>
+
+</ion-content>
