--- a/src/global.scss
+++ b/src/global.scss
@@ -25,9 +25,12 @@
         url('assets/fonts/iconfont.svg#myIcon') format('svg');
 }
 .myIcon {
-    font-family: "myIcon" !important;
+    font-family: "myIcon";
     font-size: 16px;
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+  }
+  .loading-wrapper {
+    --spinner-color: rgb(223, 16, 16);
   }
