--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,47 @@
 <ion-app>
-  <ion-split-pane>
-    <ion-menu>
-      
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
-              <ion-label>
-                {{p.title}}
-              </ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
+  <!-- 
+        type='overlay'  遮罩
+        type='reveal'   同z-index推动
+        type='push'     结合以上两个
+        swipeGesture='false' 不能通过滑动侧边来显示menu
+        swipeGesture='true' 可以通过滑动侧边来显示menu
+  -->
+  <ion-menu side="start" swipeGesture='true' class="my-custom-menu" type='overlay'>
 
-    <ion-router-outlet main></ion-router-outlet>
-  </ion-split-pane>
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>主 menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+          <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
+            <ion-icon slot="start" [name]="p.icon"></ion-icon>
+            <ion-label>
+              {{p.title}}
+            </ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-menu side="end" swipeGesture='true' class="my-custom-menu" type='overlay'>
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>副 menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content padding>
+      这里可以添加副 menu 内容
+
+      <ion-button (click)="openFirst()">openFirst</ion-button>
+
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet main></ion-router-outlet>
 </ion-app>
