--- a/src/app/nav/page1/page1.component.html
+++ b/src/app/nav/page1/page1.component.html
@@ -8,4 +8,11 @@
     <ion-button>to page2</ion-button>
   </ion-nav-push>
 
+  <ion-button (click)="presentPopover($event)">显示prover
+    <ion-icon slot="icon-only" name="person"></ion-icon>
+  </ion-button>
+  <p>
+    为了相对于单击的元素定位弹出框，需要将click事件传递给方法的选项present。如果未传递事件，则弹出窗口将位于视口的中心。
+  </p>
+
 </ion-content>
