--- a/src/app/nav/page3/page3.component.html
+++ b/src/app/nav/page3/page3.component.html
@@ -1,9 +1,7 @@
-<ion-header>
-  page3
-</ion-header>
 <ion-content>
-
-  <ion-button (click)="toPage1()">去page1</ion-button>
-  <ion-button (click)="toPage2()">去page2</ion-button>
-
+  <ul>
+    <li *ngFor="let i of arr">
+        <ion-button (click)="dfasdf()">关闭返回数据</ion-button>
+    </li>
+  </ul>
 </ion-content>
