--- a/src/app/nav/page1/page1.component.html
+++ b/src/app/nav/page1/page1.component.html
@@ -14,5 +14,8 @@
   <p>
     为了相对于单击的元素定位弹出框，需要将click事件传递给方法的选项present。如果未传递事件，则弹出窗口将位于视口的中心。
   </p>
+  <p>
+    {{returnData | json}}
+  </p>
 
 </ion-content>
