--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      nav and popover
+      nav and popover range
     </ion-title>
   </ion-toolbar>
 </ion-header>
