--- a/src/app/isInMainRoute/some-component/some-component.component.html
+++ b/src/app/isInMainRoute/some-component/some-component.component.html
@@ -82,6 +82,9 @@
   </ion-chip>
 
   <h2>Outline Chips</h2>
+  <p>
+     ionic图标库： https://ionicons.com/
+  </p>
   <ion-chip outline>
     <ion-label>Outline</ion-label>
   </ion-chip>
