--- a/src/app/isInMainRoute/nav/page2/page2.component.html
+++ b/src/app/isInMainRoute/nav/page2/page2.component.html
@@ -1,9 +1,9 @@
 <ion-header>
-  page2
-  <ion-back-button text="返回" icon="add"></ion-back-button>
+  <ion-back-button text="返回" icon="arrow-back"></ion-back-button>
 </ion-header>
-<ion-content>
 
+<ion-content>
+  page2
   <ion-button (click)="goBack()">返回上一页</ion-button>
   <ion-button (click)="goBack1()">使用NavController</ion-button>
   <ion-button (click)="goBack2()">canGoBack</ion-button>
