--- a/src/app/Module1/lazy3/lazy3.component.html
+++ b/src/app/Module1/lazy3/lazy3.component.html
@@ -1,5 +1,10 @@
-<ion-content>
+<ion-header>
 
+</ion-header>
+
+
+<ion-content>
+  <ion-back-button text="返回lazy2" defaultHref="route/lazy2"></ion-back-button>
   lazy3
   <ion-button (click)="testChild()">lazy1</ion-button>
 </ion-content>
