--- a/src/app/isInMainRoute/card/card.component.html
+++ b/src/app/isInMainRoute/card/card.component.html
@@ -41,7 +41,7 @@
 
   <ion-card>
     <ion-item class="activated">
-      <ion-icon name="wifi" slot="start"></ion-icon>
+        <ion-icon name="wifi" slot="end"></ion-icon>
       <ion-label>Card Link Item 1 .activated</ion-label>
     </ion-item>
 
