--- a/src/app/isInMainRoute/refresh/refresh.component.html
+++ b/src/app/isInMainRoute/refresh/refresh.component.html
@@ -16,9 +16,8 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <ion-text>
-    {{datas}}
-  </ion-text><br>
+  <h3>{{datas}}</h3>
+
   <ion-text>
     type 类型："email","number","password","search","tel","text","url"
   </ion-text>
