--- a/src/app/Module1/lazy1/lazy1.component.html
+++ b/src/app/Module1/lazy1/lazy1.component.html
@@ -11,6 +11,13 @@
       lazy1 的子路由
     </h2>
     <router-outlet></router-outlet>
+    <h2>未加载完数据时，用来占位的色块</h2>
+    <ion-skeleton-text width=10%></ion-skeleton-text>
+    <ion-skeleton-text width=20%></ion-skeleton-text>
+    <ion-skeleton-text width=40%></ion-skeleton-text>
+    <ion-skeleton-text width='80%'></ion-skeleton-text>
+    <ion-skeleton-text width=100%></ion-skeleton-text>
+
   </div>
 
 </ion-content>
