--- a/src/app/Module1/lazy2/lazy2.component.html
+++ b/src/app/Module1/lazy2/lazy2.component.html
@@ -1,4 +1,7 @@
 <ion-content>
   lazy2
   <ion-button (click)="testChild()">lazy3</ion-button>
+
+  <ion-button (click)="show()">显示tips</ion-button>
+
 </ion-content>
