--- a/src/app/isInMainRoute/fab/fab.component.html
+++ b/src/app/isInMainRoute/fab/fab.component.html
@@ -120,4 +120,8 @@
   </ion-fab>
 
 </ion-content>
-
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>Footer</ion-title>
+  </ion-toolbar>
+</ion-footer>
