--- a/src/app/Module1/tabs/tabs.component.html
+++ b/src/app/Module1/tabs/tabs.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header *ngIf="isShow">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
@@ -16,22 +16,18 @@
   <ion-router-outlet name="lazy3"></ion-router-outlet>
 
   <ion-tabs (ionNavWillChange)="ionNavWillChanges($event)">
-    <ion-tab-bar slot="bottom" >
+    <ion-tab-bar slot="bottom">
       <ion-tab-button tab='lazy1' class="setTab">
         <ion-label>lazy1</ion-label>
         <ion-icon name="add"></ion-icon>
         <ion-badge>6</ion-badge>
       </ion-tab-button>
 
-      <ion-tab-button tab='lazy2'>
+      <ion-tab-button tab='lazy2' class="setTab">
         <ion-label>tips</ion-label>
         <ion-icon name="logo-ionic"></ion-icon>
       </ion-tab-button>
 
-      <ion-tab-button tab='lazy3'>
-        <ion-label>lazy3</ion-label>
-        <ion-icon name="save"></ion-icon>
-      </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
 
