--- a/src/app/isInMainRoute/nav_propver/page2/page2.component.html
+++ b/src/app/isInMainRoute/nav_propver/page2/page2.component.html
@@ -5,7 +5,7 @@
 <ion-content>
   page2
   <ion-button (click)="goBack()">返回上一页</ion-button>
-  <ion-button (click)="goBack1()">使用NavController</ion-button>
-  <ion-button (click)="goBack2()">canGoBack</ion-button>
+  <ion-button (click)="goBack1()">使用NavController goBack1</ion-button>
+  <ion-button (click)="goBack2()">goBack2</ion-button>
 
 </ion-content>
