--- a/src/app/isInMainRoute/alert/alert.component.html
+++ b/src/app/isInMainRoute/alert/alert.component.html
@@ -9,8 +9,9 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-button expand="block" (click)="base()">基本的</ion-button>
-  <ion-button expand="block" (click)="presentAlertLongMessage()">长文本提示</ion-button>
+  添加自定义颜色：在theme文件夹内
+  <ion-button expand="block" color="reds" (click)="base()">基本的</ion-button>
+  <ion-button expand="block" color="pinks" (click)="presentAlertLongMessage()">长文本提示</ion-button>
   <ion-button expand="block" (click)="presentAlertMultipleButtons()">多按钮</ion-button>
 
   <ion-button expand="block" (click)="presentAlertNoMessage()">简短提示</ion-button>
