--- a/src/app/isInMainRoute/alert/alert.component.html
+++ b/src/app/isInMainRoute/alert/alert.component.html
@@ -24,4 +24,15 @@
 
   <ion-button expand="block" (click)="presentAlertCheckbox()">多选弹框</ion-button>
   <ion-button expand="block" (click)="presentWithCssClass()">使用自定义全局css</ion-button>
+
+  <h3>使用 hammerjs</h3>
+  <p>1：cnpm install hammerjs --save<br>
+    2：在组件或者main.js文件内“import 'hammerjs'”</p>
+  <ion-button (press)="doPress()">
+    长按触发的事件
+  </ion-button>
+  <ion-button (tap)="doTap()">
+    点击触发的事件
+  </ion-button>
+  {{actions}}
 </ion-content>
