--- a/src/app/Module1/lazy1/lazy1.component.html
+++ b/src/app/Module1/lazy1/lazy1.component.html
@@ -4,7 +4,9 @@
     <ion-button (click)="testRoute()">lazy2</ion-button>
     <ion-button (click)="testRoute1()">lazy1_child1</ion-button>
     <ion-button (click)="testRoute2()">lazy1_child2</ion-button>
+    <ion-button (click)="testRoute3()">navigate 任意跳转</ion-button>
   </div>
+
 
   <div>
     <h2>
