--- a/src/app/isInMainRoute/item/item.component.html
+++ b/src/app/isInMainRoute/item/item.component.html
@@ -51,19 +51,30 @@
   </ion-list>
 
   <ion-list>
+    <ion-item lines="full">
+      <ion-label>
+        lines="full"
+      </ion-label>
+    </ion-item>
+    <ion-item lines="inset">
+      <ion-label>
+        lines="inset"
+      </ion-label>
+    </ion-item>
     <ion-item lines="none">
       <ion-label>
-        没有底部 border 的
+        lines="none"
+      </ion-label>
+    </ion-item>
+    <ion-item lines="undefined">
+      <ion-label>
+        lines="undefined"
       </ion-label>
     </ion-item>
 
-    <ion-item>
-      <ion-label text-wrap>
-        <ion-text color="primary">
-          <h3>text-wrap 可以文字折行并字体有颜色 可以文字折行并字体有颜色 可以文字折行并字体有颜色 可以文字折行并字体有颜色</h3>
-        </ion-text>
-      </ion-label>
-    </ion-item>
+
+
+
   </ion-list>
 
   <ion-list>
@@ -115,6 +126,14 @@
   </ion-list>
 
   <ion-list>
+    <ion-item>
+      <ion-label text-wrap>
+        <ion-text color="primary">
+          <h3>text-wrap 可以文字折行并字体有颜色 可以文字折行并字体有颜色 可以文字折行并字体有颜色 可以文字折行并字体有颜色</h3>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+
     <ion-item (click)="buttonClick()">
       <ion-avatar slot="start">
         <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAAAAACH5BAAAAAAALAAAAAABAAEAAAICTAEAOw==">
