--- a/src/app/isInMainRoute/slide/slide.component.html
+++ b/src/app/isInMainRoute/slide/slide.component.html
@@ -1,5 +1,8 @@
 <ion-header class="setHeader">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>
       slide 轮播
     </ion-title>
